fix: hamburger hidden on mobile - update media queries in #hamburger

--- a/assets/scss/modules/_header.scss
+++ b/assets/scss/modules/_header.scss
@@ -74,7 +74,7 @@
 }
 
 #hamburger {
-  @apply block md:hidden text-slate-900 dark:text-white cursor-pointer bg-transparent;
+  @apply block lg:hidden text-slate-900 dark:text-white cursor-pointer bg-transparent;
 }
 
 #hamburger.is-open > div > span:nth-child(1) {
